<resources>
    <string name="app_name">Enseñanza</string>
    <string name="hola">¡Hola!</string>
    <string name="padretutor">Padre/Tutor</string>
    <string name="profesor">Profesor</string>
    <string name="Registrate">Registrate</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="registro">Registro</string>
    <string name="correo">correo</string>
    <string name="contraseña">contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="ingresar">Ingresar</string>
    <string name="confirmar_contraseña">confirmar contraseña</string>
    <string name="correo_de_respaldo">correo de respaldo</string>
    <string name="buenos_dias">Buenos días</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="Responsable">Responsable</string>
    <string name="nombreResponsable">Ana Pereira</string>
    <string name="correoResponsable">Ana_Pereirac74@gmail.com</string>
    <string name="nombreAlumno">Ana Guzman</string>
    <string name="grado">4° B</string>
    <string name="desempeño">Desempeño del alumno en 4° B</string>
    <string name="conectar">Conectar con</string>
    <string name="buscar">  Buscar</string>
    <string name="clases">Clases</string>
    <string name="mensajes">Mensajes</string>

    <string name="chatGrupal">Chat </string>
    <string name="chatGrupal2">Grupal </string>
    <string name="pendientes">Tenemos algunos pendientes </string>
    <string name="TareaUrg">Tarea 1 </string>
    <string name="TareaNormal">Tarea 2 </string>
    <string name="Tarea">Tarea 3 </string>
    <string name="Entregas_Tarea">Entregas de Parcial </string>
    <string name="Clases_grabadas">Clases Grabadas </string>
    <string name="videos_asesoria">Videos de asesoría</string>

    <string name="Geografia">Geografía</string>
    <string name="Historia">Historia</string>

    <string name="Español">Español</string>

    <string name="MtraGeografia">Mtra. Ana Marquez</string>
    <string name="enviar">Enviar</string>


    <string name="clasesGrabadas">Clases Grabadas</string>
    <string name="recordar">Recordar Usuario</string>
    <string name="asesorias">¡Hola espero ayudarte! Asesorias</string>
    <string name="si">SI</string>
    <string name="Masvideos">Más Videos</string>
    <string name="comentarios">Comentarios</string>
    <string name="mastarde">Mas tarde</string>

    <string name="Asignacion6">Asignación 6</string>
    <string name="titulo_asignacion">¿Cuál es mi nacionalidad?</string>
    <string name="descripcion_asignacion">En esta actividad se realizará un resumen explicando...</string>
    <string name="menu">Menú</string>
    <string name="Tareas">TAREAS</string>

    <string name="pendientes_tareas">PENDIENTES</string>


    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_pantalla_principal_maestro">pantalla_principal_maestro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>