<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2FAC66">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="428dp"
        android:layout_height="199dp"
        android:background="@drawable/mountain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@color/boton" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="418dp"
        android:layout_height="200dp"
        android:background="#C10C0C"
        android:backgroundTint="#51009688"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:srcCompat="@color/boton" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="102dp"
        android:layout_height="114dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:srcCompat="@drawable/geografiawhite" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="175dp"
        android:layout_height="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Geografia"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_extralight"
        android:text="@string/MtraGeografia"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="212dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Asignacion6"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="345dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/titulo_asignacion"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="367dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_extralight"
        android:text="@string/descripcion_asignacion"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

</androidx.constraintlayout.widget.ConstraintLayout>