<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeLima"
    tools:context=".PantallaLogin">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="imageniniciosesion"
        android:scaleType="centerCrop"
        android:src="@drawable/ninio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:fontFamily="@font/gotham_bold"
        android:shadowColor="@color/grisTexto"
        android:shadowDx="3.5"

        android:shadowDy="2.3"
        android:shadowRadius="1.6"
        android:text="@string/hola"


        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.049"></TextView>

    <ImageButton
        android:id="@+id/btnPadres"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:background="#0000"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:tooltipText="@string/padretutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></ImageButton>

    <ImageButton
        android:id="@+id/btnProfesor"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:background="#0000"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:tooltipText="@string/padretutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></ImageButton>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:text="@string/profesor"
        android:textColor="@color/grisTexto"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProfesor"
        app:layout_constraintVertical_bias="0.0"></TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="129dp"
        android:layout_height="25dp"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:text="@string/padretutor"
        android:textColor="@color/grisTexto"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPadres"
        app:layout_constraintVertical_bias="0.0"></TextView>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/verdanab"
        android:text="@string/Registrate"
        android:textColor="@color/grisTexto"
        android:textSize="20sp"
        android:background="@drawable/transparent_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>